hashmap implement set get

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 ztm-master-the-coding-interview-ds-algo-main/01_arrays/tempCodeRunnerFile.js
+ztm-master-the-coding-interview-ds-algo-main/02_hashTables/tempCodeRunnerFile.js
